--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "start": "echo --- start --- && cd server && npm start",
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run start"
+  },
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-chat-widget": "^2.1.3",
+    "react-dom": "^16.4.1",
+    "reactstrap": "^6.3.0"
   }
 }
