--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "react": "^16.4.1",
+    "react-chat-ui": "^0.3.2",
     "react-chat-widget": "^2.1.3",
     "react-dom": "^16.4.1",
     "reactstrap": "^6.3.0"
